Fixed spacing issue with main call to action buttons in mobile view.

--- a/src/sass/myservice-flexcards.scss
+++ b/src/sass/myservice-flexcards.scss
@@ -31,18 +31,26 @@
 	h2 {
 		font-size: 1.2rem !important;
 		font-weight:500 !important;
-		line-height: 0;
+		line-height: 1.1;
 		padding: 1em 0.5em 0.5em 0.5em;
 		border-bottom: 1px solid $gray-light;
 		margin-bottom: 1em;
 		img {
-			height: 30px;
-			width: 30px;
+			display: none;
 		}
 	}
 }
 
 @media only screen and (min-width: $medium-handheld) {
+	.cta-card {
+			h2 {
+				img {
+				display: inline-block;
+				height: 30px;
+				width: 30px;
+			}
+		}
+	}
 	.no-cover {
 		.no-cover-card {
 			margin-right: 1.5em;
@@ -63,133 +71,6 @@
 			p {
 				margin-bottom: 0;
 			}
-		}
-	}
-}
-
-
-
-// Everything below is for new flex cards, not yet complete
-
-
-.flexcards {
-	a {
-		border-bottom: none;
-	}
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-top: 15px;
-	padding: 1.5%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-.flexcard {
-	@media (max-width: $medium-handheld) {
-		width: 100%;
-	}
-	position: relative;
-	margin-bottom: 20px; 
-	padding-bottom: 30px; 
-	-webkit-box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
-	box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
-	text-align: center;
-	-webkit-border-radius: 6px;
-	border-radius: 6px;	
-	text-decoration: none;
-
-	@media only screen and (min-width: $large-handheld) {
-		// 2 columns
-		max-width: 320px;
-		margin-right: 20px;
-		margin-bottom: 20px;
-		&:nth-child(even) {
-			margin-right: 0;
-		}
-	}
-
-	@media only screen and (min-width: $medium-tablet) {
-		// 3 columns
-		&:nth-child(even) {
-			margin-right: 20px;
-		}
-		&:nth-child(3n) {
-			margin-right: 0;
-		}
-	}	
-
-	span {
-		display: block;
-	}
-	.card-status-icon {
-		background: $orange url(../images/ico-pending-white.svg) no-repeat 50% 0;
-		border-top: 10px solid $orange;
-		background-size: 35px 35px;
-		-webkit-border-radius: 6px 6px 0px 0px;
-		border-radius: 6px 6px 0px 0px;
-		height: 45px;
-		width: 100%;
-		margin-bottom: 0;
-		display: inline-block;			
-	}
-	.card-status-icon-submitted {
-		background: $blue-mid url(../images/ico-tick-white.svg) no-repeat 50% 0;
-		background-size: 35px 35px;
-		-webkit-border-radius: 6px 6px 0px 0px;
-		border-radius: 6px 6px 0px 0px;
-		border-top: 10px solid $blue-mid;
-	}	
-	.card-status-icon-done {
-		background: $green url(../images/ico-tick-white.svg) no-repeat 50% 0;
-		background-size: 35px 35px;
-		-webkit-border-radius: 6px 6px 0px 0px;
-		border-radius: 6px 6px 0px 0px;
-		border-top: 10px solid $green;
-	}
-	.card-status {
-		margin-bottom: 0.5em;
-	}
-	.card-summary {
-		padding: 5% 5% 3% 5%;
-	}
-	.card-header {
-		position: relative;
-		height: 100px;
-		overflow: hidden;
-		background: $feature-background;
-		border-bottom: 1px solid $feature-border;
- 		background-blend-mode: overlay;
-		&:hover, &:focus {
-			background-color: $feature-background;
-		}
-	}
-	.card-title {
-		padding: 2% 0 2.5% 0;
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		h3 {
-			font-size: 1rem;
-			line-height: 1.2;
-			padding: 0 3.5% 1em 3.5%;
-			margin: 0;
-		}
-	}
-	.card-meta {
-		color: #666;
-		text-transform: uppercase;
-		padding: 0 5%;
-		margin-top: 2em;
-	}
-	&:hover, &:focus {
-		background: white;
-		.card-title {
-			background: $feature-background;
 		}
 	}
 }
